@@ -227,6 +227,7 @@ namespace Config
             model->show_real_names_of_guests = reader->GetBoolean("show_real_names_of_guests", true);
             model->allow_early_completion = reader->GetBoolean("allow_early_completion", false);
             model->transparent_screenshot = reader->GetBoolean("transparent_screenshot", true);
+            model->opaque_water = reader->GetBoolean("opaque_water", false);
             model->last_version_check_time = reader->GetInt64("last_version_check_time", 0);
         }
     }
@@ -304,6 +305,7 @@ namespace Config
         writer->WriteBoolean("allow_early_completion", model->allow_early_completion);
         writer->WriteEnum<VirtualFloorStyles>("virtual_floor_style", model->virtual_floor_style, Enum_VirtualFloorStyle);
         writer->WriteBoolean("transparent_screenshot", model->transparent_screenshot);
+        writer->WriteBoolean("opaque_water", model->opaque_water);
         writer->WriteInt64("last_version_check_time", model->last_version_check_time);
     }
 
