@@ -100,6 +100,9 @@ enum
     SPR_TERRAIN_PATTERN_MARTIAN = 28995,
     SPR_TERRAIN_PATTERN_GRASS_CLUMPS = 29001,
     SPR_TERRAIN_PATTERN_ICE = 29007,
+
+    SPR_RCT1_WATER_MASK = SPR_CSG_BEGIN + 46787,
+    SPR_RCT1_WATER_OVERLAY = SPR_CSG_BEGIN + 46792,
 };
 
 #endif //_PAINT_SURFACE_H
